--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,14 +1,20 @@
 ---
 product: example-product
 installation_schema_version: "1.5"
-to_version: "1.5.0.0"
+to_version: "1.5.3.0"
 
 migrations:
+  - from_version: "1.5.0.0"
+    rules:
+     - type: update
+       selector: "product_version"
+       to: "1.5.3.0"
+
   - from_version: "1.4.0.0"
     rules:
       - type: update
         selector: "product_version"
-        to: "1.5.0.0"
+        to: "1.5.3.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
@@ -122,7 +128,7 @@ migrations:
     rules:
       - type: update
         selector: "product_version"
-        to: "1.5.0.0"
+        to: "1.5.3.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
@@ -236,7 +242,7 @@ migrations:
     rules:
       - type: update
         selector: "product_version"
-        to: "1.5.0.0"
+        to: "1.5.3.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
