--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: "1.6.0.0"
+to_version: "1.6.0.0-alpha.2.3062"
 
 migrations:
   - from_version: "1.4.0.0"
@@ -352,6 +352,11 @@ migrations:
         selector: "product_version"
         to: "1.6.0.0"
   - from_version: "1.5.3.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: "1.6.0.0"
+  - from_version: "1.5.5.0"
     rules:
       - type: update
         selector: "product_version"
