--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.6.0.0"
+product_version: "1.6.0.0-alpha.2.3062"
 metadata_version: "1.5"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
@@ -8,7 +8,7 @@ rank: 1
 stemcell_criteria:
   os: ubuntu-trusty
   requires_cpi: false
-  version: "3062" # Bosh stemcell for Ops Manager v1.6
+  version: "3062" # Bosh stemcell should match Ops Manager with same version
 releases:
   - name: example-release
     file: example-release-8.tgz
