--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,14 +1,11 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: "1.6.0.0-alpha.2.3062"
+to_version: "1.6.0.0-alpha.3.3062"
 
 migrations:
   - from_version: "1.4.0.0"
     rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
@@ -120,9 +117,6 @@ migrations:
         to: "http://migrated-value.com"
   - from_version: "1.4.1.0"
     rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
@@ -234,9 +228,6 @@ migrations:
         to: "http://migrated-value.com"
   - from_version: "1.4.2.0"
     rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
       - type: move
         selector: ""
         from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
@@ -347,17 +338,8 @@ migrations:
         selector: "properties.[identifier=example_http_url].value"
         to: "http://migrated-value.com"
   - from_version: "1.5.0.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
+    rules: []
   - from_version: "1.5.3.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
+    rules: []
   - from_version: "1.5.5.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: "1.6.0.0"
+    rules: []
