--- a/ci/tasks/generate-example-product.yml
+++ b/ci/tasks/generate-example-product.yml
@@ -4,10 +4,11 @@ image: docker:///ruby#2.2
 
 inputs:
 - name: ops-manager-example
+- name: version_1_5
 
 run:
   path: ops-manager-example/ci/scripts/generate-example-product
 
 params:
   REPO_DIR:
-  version:
+
