--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -9,7 +9,7 @@ jobs:
       pre: build
   - put: version_1_6
     params:
-      file: version_1_6/number
+      file: version/number
   - get: ops-manager-example
     trigger: true
   - task: generate-example-product
@@ -20,7 +20,7 @@ jobs:
         REPO_DIR: ops-manager-example
   - put: generated-example-product
     params:
-      from: ops-manager-example/example-product/example-product-*.pivotal
+      from: ops-manager-example/example-product/example-product-(.*).pivotal
 
 - name: create-product-1.5
   serial: true
@@ -32,7 +32,7 @@ jobs:
       pre: build
   - put: version_1_5
     params:
-      file: version_1_5/number
+      file: version/number
   - get: ops-manager-example
     resource: ops-manager-example-1.5
     trigger: true
@@ -44,7 +44,7 @@ jobs:
         REPO_DIR: ops-manager-example
   - put: generated-example-product-1.5.latest
     params:
-      from: ops-manager-example/example-product/example-product-*.pivotal
+      from: ops-manager-example/example-product/example-product-(.*).pivotal
 
 resources:
 - name: ops-manager-example
