--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.6"
-to_version: "1.6.0.0-alpha.4.3062"
+to_version: "1.6.0.0-alpha"
 
 migrations:
   - from_version: "1.4.0.0"
