--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -18,7 +18,7 @@ jobs:
     config:
       params:
         REPO_DIR: ops-manager-example
-  - put: generated-example-product
+  - put: generated-example-product-1.6
     params:
       from: ops-manager-example/example-product/example-product-(.*).pivotal
 
@@ -42,7 +42,7 @@ jobs:
     config:
       params:
         REPO_DIR: ops-manager-example
-  - put: generated-example-product-1.5.latest
+  - put: generated-example-product-1.5
     params:
       from: ops-manager-example/example-product/example-product-(.*).pivotal
 
@@ -59,17 +59,17 @@ resources:
     private_key: {{ops-manager-example-git-key}}
     branch: releases/1.5
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
-- name: generated-example-product
+- name: generated-example-product-1.6
   type: s3
   source:
-    regexp: example-product-(.*).pivotal
+    regexp: example-product-(1\.6.*).pivotal
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
     bucket: {{pivotal-files-bucket}}
-- name: generated-example-product-1.5.latest
+- name: generated-example-product-1.5
   type: s3
   source:
-    regexp: example-product-(.*).pivotal
+    regexp: example-product-(1\.5.*).pivotal
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
     bucket: {{pivotal-files-bucket}}
