--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -11,8 +11,8 @@ stemcell_criteria:
   version: "3074" # Bosh stemcell should match Ops Manager with same version
 releases:
   - name: example-release
-    file: example-release-9.tgz
-    version: "9"
+    file: example-release-10.tgz
+    version: "10"
 
 post_deploy_errands:
   - name: example-errand
@@ -474,6 +474,7 @@ job_types:
         first_ip: (( first_ip ))
         ips: (( ips ))
         ips_by_availability_zone: (( ips_by_availability_zone ))
+        bosh_job_partition_stats: (( bosh_job_partition_stats ))
   - name: no_op
     resource_label: No Operation
     templates:
