Add pipeline to be triggered manually that makes a final patch version of our example-product
Signed-off-by: Ryan Spore <rspore@pivotal.io>

--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -46,6 +46,17 @@ jobs:
     params:
       from: ops-manager-example/example-product/example-product-(.*).pivotal
 
+- name: after-release-1.5
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_5
+    params:
+      bump: final
+  - put: version_1_5
+    params:
+      file: version/number
+
 resources:
 - name: ops-manager-example
   type: git
