--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -366,3 +366,8 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.5.7.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
