--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -1,4 +1,28 @@
 jobs:
+- name: create-product-1.7
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_7
+    params:
+      bump: patch
+      pre: build
+  - put: version_1_7
+    params:
+      file: version/number
+  - get: ops-manager-example
+    resource: ops-manager-example-1.7
+    trigger: true
+  - task: generate-example-product
+    privileged: true
+    file: ops-manager-example/ci/tasks/generate-example-product.yml
+    config:
+      params:
+        REPO_DIR: ops-manager-example
+  - put: generated-example-product-1.7
+    params:
+      from: ops-manager-example/example-product/example-product-(.*).pivotal
+
 - name: create-product-1.6
   serial: true
   plan:
@@ -59,6 +83,12 @@ jobs:
       file: version/number
 
 resources:
+- name: ops-manager-example-1.7
+  type: git
+  source:
+    private_key: {{ops-manager-example-git-key}}
+    branch: master
+    uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
 - name: ops-manager-example-1.6
   type: git
   source:
@@ -71,6 +101,13 @@ resources:
     private_key: {{ops-manager-example-git-key}}
     branch: releases/1.5
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
+- name: generated-example-product-1.7
+  type: s3
+  source:
+    regexp: example-product-(1\.7.*).pivotal
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
 - name: generated-example-product-1.6
   type: s3
   source:
@@ -85,6 +122,14 @@ resources:
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
     bucket: {{pivotal-files-bucket}}
+- name: version_1_7
+  type: semver
+  source:
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
+    key: releases/1.7/version
+    initial_version: 1.5.5-build.0
 - name: version_1_5
   type: semver
   source:
