--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -27,6 +27,29 @@ jobs:
   serial: true
   plan:
   - get: version
+    resource: version_1_7
+    params:
+      bump: patch
+      pre: build
+  - put: version_1_7
+    params:
+      file: version/number
+  - get: ops-manager-example
+    trigger: true
+  - task: generate-example-product
+    privileged: true
+    file: ops-manager-example/ci/tasks/generate-example-product.yml
+    config:
+      params:
+        REPO_DIR: ops-manager-example
+  - put: generated-example-product-1.7
+    params:
+      from: ops-manager-example/example-product/example-product-(.*).pivotal
+
+- name: create-product-1.6
+  serial: true
+  plan:
+  - get: version
     resource: version_1_6
     params:
       bump: patch
@@ -79,6 +102,17 @@ jobs:
     params:
       bump: final
   - put: version_1_5
+    params:
+      file: version/number
+
+- name: after-release-1.6
+  serial: true
+  plan:
+  - get: version
+    resource: version_1_6
+    params:
+      bump: final
+  - put: version_1_6
     params:
       file: version/number
 
@@ -146,3 +180,11 @@ resources:
     bucket: {{pivotal-files-bucket}}
     key: releases/1.6/version
     initial_version: 1.6.0-alpha.0
+- name: version_1_7
+  type: semver
+  source:
+    access_key_id: {{concourse-artifacts-access-key}}
+    secret_access_key: {{concourse-artifacts-secret-access-key}}
+    bucket: {{pivotal-files-bucket}}
+    key: releases/1.7/version
+    initial_version: 1.7.0-alpha.0
