Fix after-release* jobs
In concourse 0.65.0 they removed a conditional statement around how they
bump a version. As such, we would bump a 1.5.8-build.1 -> 1.5.8. This
would get fed into the create-product-1.5 which only bumps the build
number; turning 1.5.8 -> 1.5.8.build.1. Instead, preemptively create
a 1.5.9-build.1 in the after-release-* jobs.

--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -75,6 +75,17 @@ jobs:
     resource: version_1_5
     params:
       bump: final
+
+  - put: version_1_5
+    params:
+      file: version/number
+
+  - get: version
+    resource: version_1_5
+    params:
+      bump: patch
+      pre: build
+
   - put: version_1_5
     params:
       file: version/number
@@ -86,6 +97,21 @@ jobs:
     resource: version_1_6
     params:
       bump: final
+
+  - put: version_1_6
+    params:
+      file: version/number
+
+  - get: version
+    resource: version_1_6
+    params:
+      bump: patch
+      pre: build
+
+  - put: version_1_6
+    params:
+      file: version/number
+
   - put: version_1_6
     params:
       file: version/number
