Add example product content migration for 1.5.8 -> current

--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -371,6 +371,11 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.5.8.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
   - from_version: "1.6.0.0"
     rules:
       - type: update
