--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -381,3 +381,8 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.6.1.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
