--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -376,12 +376,22 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.5.9.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
   - from_version: "1.6.0.0"
     rules:
       - type: update
         selector: "product_version"
         to: *to_version
   - from_version: "1.6.1.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+  - from_version: "1.6.2.0"
     rules:
       - type: update
         selector: "product_version"
