--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -5,394 +5,143 @@ to_version: &to_version "1.7.0.0-alpha"
 
 migrations:
   - from_version: "1.4.0.0"
-    rules:
+    rules: &1_4_0_0_rules
       - type: update
         selector: "product_version"
         to: *to_version
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_integer]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_boolean]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_dropdown]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_wildcard_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_text]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ldap_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_email]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_http_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_ranges]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_multi_select_options]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_port]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_smtp_authentication]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_collection]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_cert_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_pkey_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_salted_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_simple_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_secret]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_uuid]"
-        to: "properties"
-      - type: "update"
-        selector: "properties.[identifier=example_integer].identifier"
+      - type: update
+        selector: "jobs.[identifier=web_server].properties.[identifier=example_integer].identifier"
         to: "example_migrated_integer"
       - type: update
         selector: "jobs.[identifier=web_server].resources.[identifier=ram].value"
         to: 2048
       - type: update
-        selector: "properties.[identifier=example_http_url].value"
+        selector: "jobs.[identifier=web_server].properties.[identifier=example_http_url].value"
         to: "http://migrated-value.com"
   - from_version: "1.4.1.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_integer]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_boolean]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_dropdown]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_wildcard_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_text]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ldap_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_email]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_http_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_ranges]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_multi_select_options]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_port]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_smtp_authentication]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_collection]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_cert_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_pkey_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_salted_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_simple_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_secret]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_uuid]"
-        to: "properties"
-      - type: "update"
-        selector: "properties.[identifier=example_integer].identifier"
-        to: "example_migrated_integer"
-      - type: update
-        selector: "jobs.[identifier=web_server].resources.[identifier=ram].value"
-        to: 2048
-      - type: update
-        selector: "properties.[identifier=example_http_url].value"
-        to: "http://migrated-value.com"
+    rules: *1_4_0_0_rules
   - from_version: "1.4.2.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_integer]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_boolean]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_dropdown]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_wildcard_domain]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_string_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_text]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ldap_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_email]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_http_url]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_ranges]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_multi_select_options]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address_list]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_port]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_smtp_authentication]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=example_collection]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_cert_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_pkey_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_salted_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_simple_credentials]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_secret]"
-        to: "properties"
-      - type: move
-        selector: ""
-        from: "jobs.[identifier=web_server].properties.[identifier=generated_uuid]"
-        to: "properties"
-      - type: "update"
-        selector: "properties.[identifier=example_integer].identifier"
-        to: "example_migrated_integer"
-      - type: update
-        selector: "jobs.[identifier=web_server].resources.[identifier=ram].value"
-        to: 2048
-      - type: update
-        selector: "properties.[identifier=example_http_url].value"
-        to: "http://migrated-value.com"
+    rules: *1_4_0_0_rules
   - from_version: "1.5.0.0"
-    rules:
+    rules: &1_5_0_0_rules
+      - type: append
+        selector: "jobs.[identifier=web_server]"
+        to:
+          properties: []
       - type: update
         selector: "product_version"
         to: *to_version
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_string]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_migrated_integer]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_boolean]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_dropdown]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_domain]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_wildcard_domain]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_string_list]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_text]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_ldap_url]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_email]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_http_url]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_ip_address]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_ip_ranges]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_multi_select_options]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_network_address_list]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_network_address]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_port]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=example_smtp_authentication]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_rsa_cert_credentials]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_rsa_pkey_credentials]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_salted_credentials]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_simple_credentials]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_secret]"
+        to: "jobs.[identifier=web_server].properties"
+      - type: move
+        selector: ""
+        from: "properties.[identifier=generated_uuid]"
+        to: "jobs.[identifier=web_server].properties"
   - from_version: "1.5.3.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.5.5.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.5.6.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.5.7.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.5.8.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.5.9.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.6.0.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.6.1.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
   - from_version: "1.6.2.0"
-    rules:
-      - type: update
-        selector: "product_version"
-        to: *to_version
+    rules: *1_5_0_0_rules
