--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -312,7 +312,12 @@ job_types:
     - name: example_string
       type: string
       configurable: true
-      default: 'Hello world'
+      default: 'Hello_world'
+      constraints:
+      - must_match_regex: '^[^\s]*$'
+        error_message: 'This name cannot contain spaces.'
+      - must_match_regex: '^[^0-9]*$'
+        error_message: 'This name cannot contain digits.'
     - name: example_migrated_integer
       type: integer
       configurable: true
