Add migrations for 1.6.3 and 1.6.4

--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -145,3 +145,7 @@ migrations:
     rules: *1_5_0_0_rules
   - from_version: "1.6.2.0"
     rules: *1_5_0_0_rules
+  - from_version: "1.6.3.0"
+    rules: *1_5_0_0_rules
+  - from_version: "1.6.4.0"
+    rules: *1_5_0_0_rules
