Add upgrade from 1.5.14
Signed-off-by: Aram Price <aprice@pivotal.io>

--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -401,6 +401,12 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.5.14.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+
   - from_version: "1.6.0.0"
     rules:
       - type: update
