Adding usage of outputs for retrieval of example product pivotal file
Signed-off-by: Felix Reyn <freyn@pivotal.io>

--- a/ci/tasks/generate-example-product.yml
+++ b/ci/tasks/generate-example-product.yml
@@ -6,6 +6,9 @@ inputs:
 - name: ops-manager-example
 - name: version
 
+outputs:
+- name: example-product-output
+
 run:
   path: ops-manager-example/ci/scripts/generate-example-product
 
