Set zero_if value for web_server to only non-default values
Signed-off-by: Aakash Shah <ashah@pivotal.io>

--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -326,7 +326,7 @@ job_types:
       zero_if:
         property_reference: '.properties.example_selector'
         property_values:
-          - Pizza
+          - Filet Mignon
           - Beverage
     resource_definitions:
       - name: ram
